--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,8 +29,16 @@ jobs:
         make clean
         make html 
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+    - name: Move Build to the Root of docs
+      run: 
+        rm -rf docs/html
+        mv docs/_build/html docs/html
+
+
+    - name: Commit and Push built docs
+      run: | 
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add docs/html
+        git commit -m "Deploy updated Sphinx docs" || echo "No changes to commit"
+        git push origin main
