--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,22 +23,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Build Documentation
+    - name: Build Documentation and copy to /docs
       run: |
         cd docs
         make clean
         make html 
-
-    - name: Move Build to the Root of docs
-      run: 
-        rm -rf docs/html
-        mv docs/_build/html docs/
+        cp -r _build/html/* .
 
 
     - name: Commit and Push built docs
       run: | 
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add docs/
+        git add *
         git commit -m "Deploy updated Sphinx docs" || echo "No changes to commit"
         git push origin main
