--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -30,11 +30,15 @@ jobs:
         make html 
         cp -r _build/html/. .
 
+    - name: Ensure .nojekyll Exists
+      run: |
+          touch docs/.nojekyll
+
 
     - name: Commit and Push built docs
       run: | 
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add docs/
+        git add docs/*
         git commit -m "Deploy updated Sphinx docs" || echo "No changes to commit"
         git push origin main
